
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sample-python"
version = "0.0.1"
description = "something"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "2.13.0"
pylint = "2.8.2"
commitizen = "^2.17.6"
